clusters/prod-cluster/organizations/active-inference/experience/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-active-inference-experience-deployment
  namespace: active-inference
  labels:
    environment: pro
    app: hyperfy2-active-inference-experience
    pod-type: hyperfy2-active-inference-experience
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: experience
      environment: pro
      pod-type: hyperfy2-active-inference-experience
  template:
    metadata:
      labels:
        app: experience
        environment: pro
        pod-type: hyperfy2-active-inference-experience
    spec:
      serviceAccountName: active-inference-aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: active-inference-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-active-inference-experience-aws-secrets
      containers:
        - name: hyperfy2-active-inference-experience
          image: ghcr.io/numengames/numinia-hyperfy2:sha-3eb1f82755fae4b185171dc7109e89f4ab8982d3
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: experience
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
